--- a/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
+++ b/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
@@ -43,9 +43,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HdL-Om-8a3">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HdL-Om-8a3">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="AgendaCell" rowHeight="120" id="ICo-IY-jVg" customClass="AgendaCell" customModule="DroidconBoston" customModuleProvider="target">
@@ -185,6 +184,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HdL-Om-8a3" firstAttribute="top" secondItem="7n1-X2-HOR" secondAttribute="top" id="2p9-gN-Gj7"/>
+                            <constraint firstItem="hzs-Yn-EhQ" firstAttribute="top" secondItem="HdL-Om-8a3" secondAttribute="bottom" id="9dR-6g-San"/>
+                            <constraint firstAttribute="trailing" secondItem="HdL-Om-8a3" secondAttribute="trailing" id="FYw-HC-8b7"/>
+                            <constraint firstItem="HdL-Om-8a3" firstAttribute="leading" secondItem="7n1-X2-HOR" secondAttribute="leading" id="MOJ-Vm-Kws"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Agenda" id="ug9-to-Ilr"/>
                     <connections>
